--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "zagaq",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "src/App.tsx",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -16,7 +16,7 @@
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
     "@react-navigation/bottom-tabs": "^6.0.5",
-    "@react-navigation/native": "^6.0.2",
+    "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.1.0",
     "expo": "~45.0.0",
     "expo-asset": "~8.5.0",
@@ -27,9 +27,11 @@
     "expo-status-bar": "~1.3.0",
     "expo-system-ui": "~1.2.0",
     "expo-web-browser": "~10.2.0",
+    "firebase": "9.6.11",
+    "native-base": "^3.4.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-native": "0.68.2",
+    "react-native": "0.68.1",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-web": "0.17.7"
