--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo": "~45.0.0",
     "expo-asset": "~8.5.0",
     "expo-constants": "~13.1.1",
+    "expo-document-picker": "~10.2.1",
     "expo-font": "~10.1.0",
     "expo-linking": "~3.1.0",
     "expo-splash-screen": "~0.15.1",
@@ -34,13 +35,17 @@
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-vector-icons": "^9.1.0",
-    "react-native-web": "0.17.7",
-    "expo-document-picker": "~10.2.1"
+    "react-native-web": "0.17.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.66.13",
+    "@typescript-eslint/eslint-plugin": "^5.25.0",
+    "@typescript-eslint/parser": "^5.25.0",
+    "eslint": "^8.15.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-plugin-react": "^7.30.0",
     "jest": "^26.6.3",
     "jest-expo": "~45.0.0",
     "react-test-renderer": "17.0.2",
