問題集情報の編集機能の作成
画面を作るのと関数を作るのでコミットを分け忘れました

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,7 @@
     ],
     "rules": {
         "quotes": [2, "single"],
+        "linebreak-style": ["error", "windows"],
         "valid-jsdoc": "off"
     }
 }
