--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.1.0",
+    "csv-parse": "^5.1.0",
     "expo": "~45.0.0",
+    "expo-ads-admob": "~13.0.0",
     "expo-asset": "~8.5.0",
     "expo-constants": "~13.1.1",
     "expo-document-picker": "~10.2.1",
+    "expo-file-system": "~14.0.0",
     "expo-font": "~10.1.0",
     "expo-linking": "~3.1.0",
     "expo-splash-screen": "~0.15.1",
@@ -35,8 +38,7 @@
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-vector-icons": "^9.1.0",
-    "react-native-web": "0.17.7",
-    "expo-ads-admob": "~13.0.0"
+    "react-native-web": "0.17.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
